/pony/hello endpoint added
